<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>

    <!--Number keys-->
    <string name="key1">1</string>
    <string name="key2">2</string>
    <string name="key3">3</string>
    <string name="key4">4</string>
    <string name="key5">5</string>
    <string name="key6">6</string>
    <string name="key7">7</string>
    <string name="key8">8</string>
    <string name="key9">9</string>
    <string name="key0">0</string>

    <!--Operator keys-->
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="modulo">%</string>
    <string name="divide">/</string>
    <string name="clear">C</string>
    <string name="equal">=</string>
</resources>
